# project_6765

./: .gitignore  analyze_results.py  docpruner_replicate.py  inspect_merges.py  main.py  make_flow_figure.py  make_poster_figure.py  make_qualitative_figures.py  pyproject.toml  readme.md  run_all_experiments.py  run_benchmark.py  run_stats.py  run_stats_matched.py  scan_coherent_docs.py  scan_qualitative_candidates.py  scan_qualitative_v2.py  submit_jobs.sh  sweep_poster_baselines.py  sweep_poster_fixed.py  sweep_poster_remaining.py  sweep_v3_baselines.py  verify_multilang.py  verify_v01.py
.claude/: settings.json  settings.local.json
benchmark/: __init__.py  data.py  eval.py  experiment.py  model.py  plot.py  utils.py  visualize.py
benchmark/methods/: __init__.py  adaptive.py  attn_fps.py  attn_similarity.py  base.py  baselines.py  cps.py  docmerger.py  docpruner.py  dp_dedup.py  dp_postmerge.py  dp_rebalance.py  dp_residual.py  learned.py  merge_then_prune.py  mmr.py  pivot_threshold.py  pooling_1d.py  pooling_2d.py  ptm.py  ptm_postmerge.py  sem_cluster.py
docs/: adaptive_hybrid_plan.md  exp_results.md  mpdocvqa_benchmark.md  poster.html  poster_spec.md  research_plan.md
docs/posters/: docmerger_poster.html  newposter.html
new_adapted_files/: mini_script_example.py  run_vidore_docvqa_small.py
original_files/: create_index.py  rag.py
paper/: main.tex  references.bib
scripts/: 03_plot_results.py  04_plot_interactive.py  05_cross_dataset_transfer.py  06_mpdocvqa_benchmark.py  07_plot_side_by_side.py  08_plot_three_benchmarks.py
(+2 files in other folders)
